gcc/testsuite/gm2/pim/fail/inserttok.mod
IMPLEMENTATION MODULE inserttok ;

(* Hit this problem in a definition module *)

END inserttok.
